<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/btnToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Login"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <Button
                android:id="@+id/btnToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Registration"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <Button
                android:id="@+id/btnToCreateDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/CreateDiscount"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <Button
                android:id="@+id/btnToUploadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/UploadImage"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <Button
                android:id="@+id/btnToDiscountList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/DiscountList"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <Button
                android:id="@+id/btnToProfileActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
